add: about section fixed: media query

--- a/index.html
+++ b/index.html
@@ -72,39 +72,73 @@
         </nav>       
         <ul data-tab-id="main_cast" class="about__list">
             <li class="about__list__item">
-                <img src="" alt="">
-                <p>Keanu Reaves</p>
-                <p></p>
+                <img src="./dist/img/actors/keanu-reeves.png" alt="">
+                <p class="text--big">
+                    Keanu Reaves
+                </p>
+                <p class="text--small">
+                    Neo
+                </p>
             </li>
-            <li class="about__list__item"><img src="" alt="">
-                <p></p>
-                <p></p>
+            <li class="about__list__item">
+                <img src="./dist/img/actors/carrie-anne-moss.png" alt="">
+                <p class="text--big">
+                    Carrie-Anne Moss
+                </p>
+                <p class="text--small">
+                    Trinity
+                </p>
             </li>
-            <li class="about__list__item"><img src="" alt="">
-                <p></p>
-                <p></p>
+            <li class="about__list__item">
+                <img src="./dist/img/actors/laurence-fishburne.png" alt="">
+                <p class="text--big">
+                    Laurence Fishburne
+                </p>
+                <p class="text--small">
+                    Morpheus
+                </p>
             </li>
-            <li class="about__list__item"><img src="" alt="">
-                <p></p>
-                <p></p>
+            <li class="about__list__item">
+                <img src="./dist/img/actors/hugo-weaving.png" alt="">
+                <p class="text--big">
+                    Hugo Weaving
+                </p>
+                <p class="text--small">
+                    Agente Smith
+                </p>
             </li>
-            <li class="about__list__item"><img src="" alt="">
-                <p></p>
-                <p></p>
+            <li class="about__list__item">
+                <img src="./dist/img/actors/gloria-foster.png" alt="">
+                <p class="text--big">
+                    Gloria Foster
+                </p>
+                <p class="text--small">
+                    Oráculo
+                </p>
             </li>
-            <li class="about__list__item"><img src="" alt="">
-                <p></p>
-                <p></p>
+            <li class="about__list__item">
+                <img src="./dist/img/actors/joe-pantoliano.png" alt="">
+                <p class="text--big">
+                    Joe Pantoliano
+                </p>
+                <p class="text--small">
+                    Cypher
+                </p>
             </li>
         </ul>
+
         <ul data-tab-id="directors" class="about__list">
             <li class="about__list__item">
-                <img src="" alt="">
-                <h4></h4>
+                <img src="./dist/img/directors/lana.png" alt="">
+                <h4 class="text--big">
+                    Lana Wachowski
+                </h4>
             </li>
             <li class="about__list__item">
-                <img src="" alt="">
-                <h4></h4>
+                <img src="./dist/img/directors/lilly.png" alt="">
+                <h4 class="text--big">
+                    Lilly Wachowski
+                </h4>
             </li>
         </ul>
     </section>
