Fixed: ajuste de responsividade

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 Direção
             </button>
         </nav>       
-        <ul data-tab-id="main_cast" class="about__list">
+        <ul data-tab-id="main_cast" class="about__list about__list--is-active">
             <li class="about__list__item">
                 <img src="./dist/img/actors/keanu-reeves.png" alt="">
                 <p class="text--big">
