Add: sequel and faq sections/ scripts and responsive designs

--- a/index.html
+++ b/index.html
@@ -142,6 +142,64 @@
             </li>
         </ul>
     </section>
+    <section class="sequel">
+        <h4 class="title--small">Confira as sequências</h4>
+        <ul class="sequel__content">
+            <li class="sequel__content__item">
+                <img src="./dist/img/sequel/The_Matrix_Reloaded.png" alt="Matrix Reloaded">
+                <p class="text">Matrix: Reloaded</p>
+                <p class="text--small">2003</p>
+            </li>
+            <li class="sequel__content__item">
+                <img src="./dist/img/sequel/The_Matrix_Revolutions.png" alt="Matrix Revolutions">
+                <p class="text">Matrix: Revolutions</p>
+                <p class="text--small">2003</p>
+            </li>
+            <li class="sequel__content__item">
+                <img src="./dist/img/sequel/The_Matrix_Resurrections.png" alt="Matrix Ressurrections">
+                <p class="text">Matrix: Ressurrections</p>
+                <p class="text--small">2021</p>
+            </li>
+        </ul>
+    </section>
+    <section class="faq">
+        <h4 class="title--small">Premiações</h4>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__quest title--small" data-faq-question>
+                    Oscar (Academy Awards)
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <ul>
+                        <li>Melhor Edição (1999)</li> <br>
+                        <li>Melhor Efeitos Visuais (1999)</li> <br>
+                        <li>Melhor Direção de Arte (1999)</li> <br>
+                        <li>Melhor Mixagem de Som (1999)</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__quest title--small" data-faq-question>
+                    Golden Globe Awards
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Indicado: Melhor Filme - Drama (2000)
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__quest title--small" data-faq-question>
+                    Outros
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <ul>
+                        <li>BAFTA Awards: Melhores Efeitos Especiais (2000)</li>  <br>
+                        <li>Saturn Awards: Venceu 4 prêmios, incluindo Melhor Filme de Ficção Científica e Melhor Direção</li> <br>
+                        <li>Teen Choice Awards: Venceu prêmios de Melhor Filme de Ação e Melhor Ator em Filme de Ação (Keanu Reeves)</li> <br>
+                        <li>MTV Movie Awards: Venceu Melhor Luta (Keanu Reeves vs. Laurence Fishburne)</li>
+                    </ul>
+                </div>            
+        </ul>
+    </section>
 
 <script src="./src/scripts/main.js"></script>
 </body>
