add: footer section

--- a/index.html
+++ b/index.html
@@ -200,6 +200,49 @@
                 </div>            
         </ul>
     </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="./dist/img/matrix-display.png" alt="The Matrix">
+        <ul class="footer__links">
+            <li class="footer__links__item">
+                <div class="language-selector">
+                    <img src="./dist/img/globe.svg" alt="globo">
+                <select>
+                    <option>English</option>
+                    <option selected>Português</option>
+                </select>
+                </div>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="#">Termos e Condições de Uso</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="#">Política de privacidade</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="#">Proteção de dados no Brasil</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="#">Anúncios personalizados</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="#">Sites externos</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="#">Ajuda</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="#">Sobre o cinema</a>
+            </li>
+        </ul>
+        <p class="text--small">
+            ©2024 WarnerMedia Direct Latin America, LLC. Todos os direitos reservados. Max é usado sob licença.
+        </p>
+        <p class="text--small">
+            Este site foi desenvolvido por Arthur Weber.
+        </p>
+        </div>
+    </footer>
 
 <script src="./src/scripts/main.js"></script>
 </body>
