--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Matrix | Index</title>
 </head>
 <body>
+    <header class="header">
+        <div class="header__container">
+            <h1>
+                <img class="header__logo" src="./dist/img/matrix-display.png" alt="The Matrix">
+            </h1>
+            <div class="header__links">
+                <div class="header__links__item">
+                    <button class="button button--secondary">Assista agora</button>
+                </div>
+            </div>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
             <div class="hero__content__branding">
