--- a/index.html
+++ b/index.html
@@ -256,6 +256,6 @@
         </div>
     </footer>
 
-<script src="./src/scripts/main.js"></script>
+<script src="./dist/scripts/main.js"></script>
 </body>
 </html>
