Fixed: max logo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul class="hero__content__links">                
                 <li>            
                     <a href="https://www.max.com/br/pt/movies/matrix/012cacbd-5893-4379-b7a6-d3737c61d4b5?utm_source=universal_search">
-                        <img src="./dist/img/Max_logo.png" alt="HBO Max">
+                        <img src="./dist/img/max_logo.png" alt="HBO Max">
                     </a>
                 </li>
                 <li>
