Ajuste na seção synopsis

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     <section class="synopsis">
         <div class="synopsis__container">
             <div class="synopsis__container__img_container">
-                <img src="./dist/img/synopsis_img.png" alt="">
+                <picture>
+                    <source media="(max-width: 768px)" srcset="" />
+                    <img src="./dist/img/synopsis_img.png" alt="">
+                </picture>
             </div>
             <div class="synopsis__container__text_container">
                 <h4 class="title--small">Sinopse</h4>
